tests/snapshots/cargo_leet__tool__core__generate__tests__code_generated construct-smallest-number-from-di-string.snap
---
source: src/tool/core/generate.rs
expression: code_generated
---
//! Solution for https://leetcode.com/problems/construct-smallest-number-from-di-string
//! 2375. Construct Smallest Number From DI String

impl Solution {
    pub fn smallest_number(pattern: String) -> String { todo!("Fill in body") }
}

// << ---------------- Code below here is only for local use ---------------- >>

pub struct Solution;

#[cfg(test)]
mod tests {
    use super::*;
    

    use rstest::rstest;

    #[rstest]
    #[case("IIIDIDDD", 123549876)]
    #[case("DDD", 4321)]
    fn case(#[case] pattern: String, #[case] expected: String) {
        let actual = Solution::smallest_number(pattern);
        assert_eq!(actual, expected);
    }
}
