tests/snapshots/cargo_leet__tool__core__generate__tests__code_generated count-of-substrings-containing-every-vowel-and-k-consonants-ii.snap
---
source: src/tool/core/generate.rs
expression: code_generated
---
//! Solution for https://leetcode.com/problems/count-of-substrings-containing-every-vowel-and-k-consonants-ii
//! 3306. Count of Substrings Containing Every Vowel and K Consonants II

impl Solution {
    pub fn count_of_substrings(word: String, k: i32) -> i64 { todo!("Fill in body") }
}

// << ---------------- Code below here is only for local use ---------------- >>

pub struct Solution;

#[cfg(test)]
mod tests {
    use super::*;
    

    use rstest::rstest;

    #[rstest]
    #[case("aeioqq", 1, 0)]
    #[case("aeiou", 0, 1)]
    #[case("ieaouqqieaouqq", 1, 3)]
    fn case(#[case] word: String, #[case]  k: i32, #[case] expected: i64) {
        let actual = Solution::count_of_substrings(word, k);
        assert_eq!(actual, expected);
    }
}
